AC_INIT([zusammhg], [0.1.1], [none@example.net])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
])
AC_CONFIG_MACRO_DIRS([m4])
AC_PATH_PROG([GDB], [gdb])
WF_GDB_PYTHON_VERSION([GDB_PYTHON_VERSION], [GDB])
AC_PATH_PROG([PYTHON], [python$GDB_PYTHON_VERSION])
AX_PYTHON_MODULE([graphviz], [yes], PYTHON)
AC_OUTPUT
